--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "query-string": "^4.2.3",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1"
   },
   "scripts": {
