--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "query-string": "^4.2.3",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
+    "react-bootstrap-table": "^2.8.0",
     "react-dom": "^15.4.1"
   },
   "scripts": {
