--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-/sql_config.php
-.idea
-web/json/
-*.iml
-atcoder-api/
-*/node_modules/
-*.DS_Store
-*.log
-*.json
+**/.idea
+**/Cargo.lock
+**/*.iml
