--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,3 +7,6 @@ authors = ["kenkoooo <kenkou.n@gmail.com>"]
 select = "0.4.2"
 reqwest = "0.7.3"
 regex = "0.2.2"
+serde = "*"
+serde_json = "1.0"
+serde_derive = "1.0.15"
