--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ matrix:
       before_script:
         - cd backend
       script:
-        - RUST_BACKTRACE=1 cargo test
+        - RUST_BACKTRACE=full cargo test
