--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+services:
+  - mysql
 matrix:
   include:
     - language: rust
@@ -5,4 +7,5 @@ matrix:
       before_script:
         - cd backend
       script:
+        - cat ~travis/.my.cnf
         - RUST_BACKTRACE=full cargo test
