--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -9,9 +9,12 @@
   "author": "kenkoooo",
   "license": "ISC",
   "dependencies": {
+    "@types/query-string": "^5.0.1",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
+    "query-string": "^5.0.1",
     "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1"
   },
   "devDependencies": {
