--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/query-string": "^5.0.1",
     "@types/react": "^16.0.25",
+    "@types/react-bootstrap": "^0.31.8",
     "@types/react-dom": "^16.0.3",
     "query-string": "^5.0.1",
     "react": "^16.1.1",
