--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
+services:
+  - postgresql
+
 matrix:
   include:
     - language: scala
       scala: 2.12.3
       before_script:
         - cd atcoder-problems
+        - psql -c "CREATE USER user PASSWORD 'pass'" -U postgres
+        - psql -c "CREATE DATABASE test OWNER user" -U postgres
       script:
         - sbt clean coverage test coverageReport
       after_success:
