--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -13,10 +13,12 @@
     "@types/query-string": "^5.0.1",
     "@types/react": "^16.0.25",
     "@types/react-bootstrap": "^0.31.8",
+    "@types/react-bootstrap-table": "^4.1.0",
     "@types/react-dom": "^16.0.3",
     "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
+    "react-bootstrap-table": "^4.1.5",
     "react-dom": "^16.1.1"
   },
   "devDependencies": {
