--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -15,11 +15,14 @@
     "@types/react-bootstrap": "^0.31.8",
     "@types/react-bootstrap-table": "^4.1.0",
     "@types/react-dom": "^16.0.3",
+    "@types/superagent": "^3.5.6",
     "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-table": "^4.1.5",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "superagent": "^3.8.1",
+    "ts-option": "^1.1.4"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.3.0",
