update travis node version

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
       after_success:
         - bash <(curl -s https://codecov.io/bash)
     - language: node_js
+      node_js: "node"
       before_script:
         - cd atcoder-problems-frontend
       script:
