--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "@types/c3": "^0.4.47",
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-to-json": "^1.5.0",
     "@types/query-string": "^5.0.1",
@@ -40,6 +41,7 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-test-renderer": "^16.0.0",
     "@types/superagent": "^3.5.6",
+    "c3": "^0.4.18",
     "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
