--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -34,6 +34,7 @@
     "@types/c3": "^0.4.47",
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-to-json": "^1.5.0",
+    "@types/moment": "^2.13.0",
     "@types/query-string": "^5.0.1",
     "@types/react": "^16.0.25",
     "@types/react-bootstrap": "^0.31.8",
@@ -42,6 +43,7 @@
     "@types/react-test-renderer": "^16.0.0",
     "@types/superagent": "^3.5.6",
     "c3": "^0.4.18",
+    "moment": "^2.19.2",
     "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
