--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -16,7 +16,13 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
     "collectCoverageFrom": [
@@ -34,6 +40,7 @@
     "@types/react": "^16.0.25",
     "@types/react-bootstrap": "^0.31.8",
     "@types/react-bootstrap-table": "^4.1.0",
+    "@types/react-calendar-heatmap": "^1.6.0",
     "@types/react-dom": "^16.0.3",
     "@types/react-test-renderer": "^16.0.0",
     "@types/superagent": "^3.5.6",
@@ -43,6 +50,7 @@
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
     "react-bootstrap-table": "^4.1.5",
+    "react-calendar-heatmap": "^1.6.2",
     "react-dom": "^16.1.1",
     "superagent": "^3.8.1",
     "ts-option": "^1.1.4"
