--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -19,7 +19,13 @@
       "c3": "./src/__mocks__/c3.js"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ],
     "coverageDirectory": "./coverage/",
     "collectCoverage": true,
     "collectCoverageFrom": [
@@ -42,6 +48,7 @@
     "@types/superagent": "^3.5.6",
     "c3": "^0.4.18",
     "moment": "^2.19.2",
+    "moment-timezone": "^0.5.14",
     "query-string": "^5.0.1",
     "react": "^16.1.1",
     "react-bootstrap": "^0.31.5",
