--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -38,6 +38,7 @@
     "@types/c3": "^0.4.47",
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-to-json": "^1.5.0",
+    "@types/moment-timezone": "^0.5.2",
     "@types/query-string": "^5.0.1",
     "@types/react": "^16.0.25",
     "@types/react-bootstrap": "^0.31.8",
