--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
         - cd atcoder-problems-frontend
       script:
         - npm install
+        - npm run build
         - npm test
       after_success:
         - codecov
