--- a/atcoder-problems-predictor/requirements.txt
+++ b/atcoder-problems-predictor/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.6.0
 bleach==2.1.1
 cycler==0.10.0
 decorator==4.1.2
@@ -46,4 +47,4 @@ traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
 widgetsnbextension==3.0.8
-xgboost==0.6a2
+xgboost==0.7.post3
