--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -35,24 +35,24 @@
     ]
   },
   "dependencies": {
-    "@types/c3": "^0.4.47",
+    "@types/c3": "^0.6.0",
     "@types/enzyme": "^3.1.5",
     "@types/enzyme-to-json": "^1.5.0",
     "@types/moment-timezone": "^0.5.2",
-    "@types/query-string": "^5.0.1",
+    "@types/query-string": "^6.1.0",
     "@types/react": "^16.0.25",
-    "@types/react-bootstrap": "^0.31.8",
+    "@types/react-bootstrap": "^0.32.10",
     "@types/react-bootstrap-table": "^4.1.0",
     "@types/react-calendar-heatmap": "^1.6.0",
     "@types/react-dom": "^16.0.3",
     "@types/react-test-renderer": "^16.0.0",
     "@types/superagent": "^3.5.6",
-    "c3": "^0.4.18",
+    "c3": "^0.6.2",
     "moment": "^2.19.2",
     "moment-timezone": "^0.5.14",
-    "query-string": "^5.0.1",
+    "query-string": "^6.1.0",
     "react": "^16.1.1",
-    "react-bootstrap": "^0.31.5",
+    "react-bootstrap": "^0.32.1",
     "react-bootstrap-table": "^4.1.5",
     "react-calendar-heatmap": "^1.6.2",
     "react-dom": "^16.1.1",
@@ -61,19 +61,20 @@
   },
   "devDependencies": {
     "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/jest": "^21.1.8",
-    "awesome-typescript-loader": "^3.3.0",
+    "@types/jest": "^23.1.3",
+    "awesome-typescript-loader": "^5.2.0",
     "codecov": "^3.0.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "enzyme-to-json": "^3.2.2",
-    "jest": "^21.2.1",
-    "jest-enzyme": "^4.0.1",
-    "json-server": "^0.12.1",
+    "jest": "^23.2.0",
+    "jest-enzyme": "^6.0.2",
+    "json-server": "^0.14.0",
     "react-test-renderer": "^16.1.1",
     "source-map-loader": "^0.2.3",
-    "ts-jest": "^21.2.3",
+    "ts-jest": "^22.4.6",
     "typescript": "^2.6.1",
-    "webpack": "^3.8.1"
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8"
   }
 }
