--- a/atcoder-problems-predictor/requirements.txt
+++ b/atcoder-problems-predictor/requirements.txt
@@ -1,56 +1,12 @@
-backcall==0.1.0
-beautifulsoup4==4.6.0
-bleach==2.1.3
-cycler==0.10.0
-decorator==4.3.0
-entrypoints==0.2.3
-html5lib==1.0.1
-ipykernel==4.8.2
-ipython==6.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.2.1
-jedi==0.12.1
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
-MarkupSafe==1.0
-matplotlib==2.2.2
-mistune==0.8.3
-nbconvert==5.3.1
-nbformat==4.4.0
-notebook==5.6.0
-numpy==1.14.5
-packaging==17.1
-pandas==0.23.3
-pandocfilters==1.4.2
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.4
-pip-review==1.0
-prometheus-client==0.3.0
-prompt-toolkit==2.0.3
-psycopg2==2.7.5
-ptyprocess==0.6.0
-Pygments==2.2.0
-pyparsing==2.2.0
-python-dateutil==2.7.3
-pytz==2018.5
-pyzmq==17.1.0
-qtconsole==4.3.1
-scikit-learn==0.19.1
-scipy==1.1.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.11.0
-terminado==0.8.1
-testpath==0.3.1
-tornado==5.1
-traitlets==4.3.2
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.2.1
-xgboost==0.72.1
+beautifulsoup4==4.6.3
+bs4==0.0.1
+numpy==1.15.4
+pandas==0.23.4
+psycopg2==2.7.6.1
+python-dateutil==2.7.5
+pytz==2018.7
+scikit-learn==0.20.2
+scipy==1.2.0
+six==1.12.0
+sklearn==0.0
+xgboost==0.81
