--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -46,8 +46,7 @@
     "@types/react-test-renderer": "^16.8.1",
     "@types/superagent": "^3.8.6",
     "c3": "^0.6.12",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.23",
+    "date-fns": "^1.30.1",
     "query-string": "^6.2.0",
     "react": "^16.8.2",
     "react-bootstrap": "^0.32.4",
@@ -75,6 +74,7 @@
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3",
     "webpack": "^4.14.0",
+    "webpack-bundle-analyzer": "^3.0.4",
     "webpack-cli": "^3.0.8"
   }
 }
