--- a/atcoder-problems/package.json
+++ b/atcoder-problems/package.json
@@ -6,13 +6,13 @@
     "@types/jest": "24.0.6",
     "@types/node": "11.9.5",
     "@types/react": "16.8.4",
+    "@types/react-bootstrap-table": "^4.3.7",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^7.1.3",
     "bootstrap": "^4.3.1",
     "react": "^16.8.3",
-    "react-bootstrap-table-next": "^3.0.0",
-    "react-bootstrap-table2-paginator": "^2.0.3",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
