--- a/atcoder-problems/package.json
+++ b/atcoder-problems/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^7.1.3",
+    "@types/recharts": "^1.1.14",
     "bootstrap": "^4.3.1",
     "react": "^16.8.3",
     "react-bootstrap-table": "^4.3.1",
@@ -17,6 +18,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "reactstrap": "^7.1.0",
+    "recharts": "^1.5.0",
     "typescript": "3.3.3333"
   },
   "scripts": {
