--- a/atcoder-problems/package.json
+++ b/atcoder-problems/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.8.4",
     "@types/react-bootstrap-table": "^4.3.7",
     "@types/react-dom": "16.8.2",
+    "@types/react-measure": "^2.0.5",
     "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^7.1.3",
     "@types/recharts": "^1.1.14",
@@ -15,6 +16,7 @@
     "react": "^16.8.3",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.8.3",
+    "react-measure": "^2.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "reactstrap": "^7.1.0",
