--- a/atcoder-problems/package.json
+++ b/atcoder-problems/package.json
@@ -2,6 +2,7 @@
   "name": "atcoder-problems",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@types/jest": "24.0.6",
     "@types/node": "11.9.5",
