--- a/atcoder-problems-api-server/Cargo.toml
+++ b/atcoder-problems-api-server/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 
 [dependencies]
 postgres = "0.15"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+url = "1.7.2"
