--- a/atcoder-problems-api-server/Cargo.toml
+++ b/atcoder-problems-api-server/Cargo.toml
@@ -10,3 +10,6 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 url = "1.7.2"
 iron = "0.6"
+
+[dependencies.urlencoded]
+version = "*"
