--- a/atcoder-problems-api-server/Cargo.toml
+++ b/atcoder-problems-api-server/Cargo.toml
@@ -8,8 +8,6 @@ edition = "2018"
 postgres = "0.15"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-url = "1.7.2"
-iron = "0.6"
-
-[dependencies.urlencoded]
-version = "*"
+actix-web = "0.7.18"
+actix = "0.7.9"
+regex = "1"
