--- a/atcoder-problems-scraper/Cargo.toml
+++ b/atcoder-problems-scraper/Cargo.toml
@@ -16,3 +16,4 @@ env_logger = "0.6.1"
 log = "0.4.6"
 lambda_runtime = "^0.1"
 openssl = { version = "0.10", features = ["vendored"] }
+diesel = { version = "1.0.0", features = ["postgres"] }
