--- a/atcoder-problems-scraper/Cargo.toml
+++ b/atcoder-problems-scraper/Cargo.toml
@@ -14,5 +14,7 @@ regex = "1"
 env_logger = "0.6.1"
 log = "0.4.6"
 lambda_runtime = "^0.1"
-openssl = { version = "0.10", features = ["vendored"] }
-diesel = { version = "1.0.0", features = ["postgres"] }
+openssl = "*"
+diesel = { version = "1.4.2", features = ["postgres"] }
+r2d2 = "0.8.3"
+r2d2-diesel = "1.0.0"
