--- a/atcoder-problems-scraper/Cargo.toml
+++ b/atcoder-problems-scraper/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 scraper = "0.9"
-reqwest = "0.9"
+reqwest = { version = "0.9", features = ["rustls-tls"], default-features = false }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
@@ -14,7 +14,6 @@ regex = "1"
 env_logger = "0.6.1"
 log = "0.4.6"
 lambda_runtime = "^0.1"
-openssl = "*"
 diesel = { version = "1.4.2", features = ["postgres"] }
 r2d2 = "0.8.3"
 r2d2-diesel = "1.0.0"
