--- a/atcoder-problems-frontend/.editorconfig
+++ b/atcoder-problems-frontend/.editorconfig
@@ -2,3 +2,7 @@ root = true
 
 [*]
 indent_size = 2
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+max_line_length = 80
