--- a/atcoder-problems-api-lambda/Cargo.toml
+++ b/atcoder-problems-api-lambda/Cargo.toml
@@ -5,12 +5,15 @@ authors = ["Kenko Nakamura <kenkou.n@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+atcoder-problems-sql-common = { path = "../atcoder-problems-sql-common" }
 lambda_runtime = "^0.1"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+diesel = { version = "1.4.2", features = ["postgres"] }
+openssl-probe = "0.1.2"
+openssl = "*"
 log = "^0.4"
 simple_logger = "^1"
-postgres = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [[bin]]
 name = "bootstrap"
