Fixed the design for the smartphones

--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -2,7 +2,7 @@
   "name": "atcoder-problems",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://kenkoooo.com/atcoder",
   "dependencies": {
     "@types/jest": "24.0.6",
     "@types/node": "11.9.5",
