--- a/atcoder-problems-api-lambda/Cargo.toml
+++ b/atcoder-problems-api-lambda/Cargo.toml
@@ -14,6 +14,8 @@ log = "^0.4"
 simple_logger = "^1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+md-5 = "0.8"
+hex = "0.3"
 
 [[bin]]
 name = "bootstrap"
