--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -21,3 +21,6 @@ scraper = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple_logger = "1.2"
+md-5 = "0.8"
+hex = "0.3"
+
