--- a/codecov.yml
+++ b/codecov.yml
@@ -5,3 +5,8 @@ coverage:
         target: auto
         threshold: 0
         base: auto 
+    patch:
+      default:
+        target: auto
+        threshold: 0
+        base: auto 
