--- a/codecov.yml
+++ b/codecov.yml
@@ -2,11 +2,11 @@ coverage:
   status:
     project:
       default:
-        target: auto
+        target: 0
         threshold: 0
         base: auto 
     patch:
       default:
-        target: auto
+        target: 0
         threshold: 0
         base: auto 
