--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = { version = "0.9", features = ["rustls-tls"], default-features = false
 rusoto_cloudwatch = "0.39.0"
 rusoto_s3 = "0.39.0"
 rusoto_core = "0.39.0"
+rusoto_mock = "0.39.0"
 scraper = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
