--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -15,6 +15,7 @@
     "@types/recharts": "^1.1.14",
     "bootstrap": "^4.3.1",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.8.3",
