--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,5 @@ matrix:
         - npm install yarn -g
         - yarn
         - yarn build
-        - yarn test
+        - yarn test --coverage
+        - npx codecov
