Updated Dockerfile.crawler to enable multi-stage build

--- a/Dockerfile.crawler
+++ b/Dockerfile.crawler
@@ -1,6 +1,11 @@
+FROM rust:1.38 AS builder
+
+RUN USER=root cargo new app
+WORKDIR /app
+ADD ./atcoder-problems-backend/Cargo.toml /app
+RUN cargo build --release
+ADD ./atcoder-problems-backend/src /app/src
+RUN cargo build --release
+
 FROM rust:1.38
-
-ADD atcoder-problems-backend/ /atcoder-problems-backend
-
-RUN cd /atcoder-problems-backend \
-    && cargo build
+COPY --from=builder /app/target/release/crawl /usr/bin/crawl
