--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -5,9 +5,10 @@ authors = ["kenkoooo <kenkou.n@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+actix-web = "2.0.0-alpha.1"
 base64 = "0.10"
 chrono = "0.4"
-diesel = { version = "1.4.2", features = ["postgres"] }
+diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
 lambda_runtime = "0.2"
 log = "0.4.6"
 openssl = "*"
@@ -24,3 +25,4 @@ simple_logger = "1.2"
 md-5 = "0.8"
 hex = "0.3"
 algorithm-problem-client = "0.4"
+r2d2 = "0.8.7"
