--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "homepage": "https://kenkoooo.com/atcoder",
   "dependencies": {
-    "@types/jest": "24.0.6",
-    "@types/node": "11.9.5",
-    "@types/react": "16.8.4",
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.14",
+    "@types/react": "16.9.15",
     "@types/react-bootstrap-table": "^4.3.7",
-    "@types/react-dom": "16.8.2",
+    "@types/react-dom": "16.9.4",
     "@types/react-measure": "^2.0.5",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/reactstrap": "^7.1.3",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.2.0",
     "@types/recharts": "^1.1.14",
     "bootstrap": "^4.3.1",
     "immutable": "^4.0.0-rc.12",
@@ -21,13 +21,13 @@
     "react-dom": "^16.8.3",
     "react-measure": "^2.2.4",
     "react-redux": "^7.1.0",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "reactstrap": "^7.1.0",
-    "recharts": "^1.5.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "reactstrap": "^8.2.0",
+    "recharts": "^2.0.0-beta.1",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
-    "typescript": "3.3.3333"
+    "typescript": "3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
