--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 services:
   - postgresql
 addons:
-  postgresql: "9.6"
+  postgresql: "10.8"
 matrix:
   include:
     - language: rust
@@ -9,7 +9,7 @@ matrix:
       rust: nightly
       before_install:
         - cd atcoder-problems-backend/
-        - curl -L https://github.com/mozilla/grcov/releases/download/v0.5.1/grcov-linux-x86_64.tar.bz2 | tar jxf -
+        - curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-linux-x86_64.tar.bz2 | tar jxf -
       before_script:
         - psql -c "CREATE USER kenkoooo PASSWORD 'pass';" -U postgres
         - psql -c "CREATE DATABASE test OWNER kenkoooo;" -U postgres
