--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,10 @@ matrix:
         - export RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zno-landing-pads"
         - cargo build --verbose $CARGO_OPTIONS
         - RUST_TEST_THREADS=1 cargo test --verbose $CARGO_OPTIONS
-        - zip -0 ccov.zip `find . \( -name "atcoder_problems_backend*.gc*" \) -print`;
-        - RUST_BACKTRACE=1 ./grcov ccov.zip -s . -t lcov --llvm --branch --ignore-not-existing --ignore-dir "/*" -o lcov.info
-        - bash <(curl -s https://codecov.io/bash) -f lcov.info
+        - |
+          zip -0 ccov.zip `find . \( -name "YOUR_PROJECT_NAME*.gc*" \) -print`;
+          ./grcov ccov.zip -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" -o lcov.info;
+          bash <(curl -s https://codecov.io/bash) -f lcov.info;
     - language: node_js
       node_js: node
       before_script:
