--- a/.travis.yml
+++ b/.travis.yml
@@ -5,21 +5,21 @@ matrix:
     - language: rust
       os: linux
       rust: nightly
+      cache: cargo
       before_install:
         - cd atcoder-problems-backend/
-        - curl -L https://github.com/mozilla/grcov/releases/latest/download/grcov-linux-x86_64.tar.bz2 | tar jxf -
       before_script:
         - psql -c "CREATE USER kenkoooo PASSWORD 'pass';" -U postgres
         - psql -c "CREATE DATABASE test OWNER kenkoooo;" -U postgres
       script:
-        - export CARGO_INCREMENTAL=0
-        - export RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Zno-landing-pads"
-        - cargo build --verbose $CARGO_OPTIONS
-        - RUST_TEST_THREADS=1 cargo test --verbose $CARGO_OPTIONS
-        - |
-          zip -0 ccov.zip `find . \( -name "YOUR_PROJECT_NAME*.gc*" \) -print`;
-          ./grcov ccov.zip -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" -o lcov.info;
-          bash <(curl -s https://codecov.io/bash) -f lcov.info;
+        - cargo clean
+        - cargo build
+        - RUST_TEST_THREADS=1 cargo test
+      before_cache:
+        - cargo install cargo-tarpaulin -f
+      after_success:
+        - cargo tarpaulin --out Xml --verbose
+        - bash <(curl -s https://codecov.io/bash)
     - language: node_js
       node_js: node
       before_script:
