--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -10,7 +10,6 @@ chrono = "0.4"
 diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
 log = "0.4.6"
 regex = "1"
-reqwest = { version = "0.9", features = ["rustls-tls"], default-features = false }
 rusoto_s3 = "0.42.0"
 rusoto_core = "0.42.0"
 rusoto_mock = "0.42.0"
@@ -25,3 +24,7 @@ r2d2 = "0.8.7"
 futures = "0.3"
 tide = "0.4.0"
 http = "0.2.0"
+
+[dev-dependencies]
+async-std = "1.2.0"
+surf = "1.0.3"
