--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 services:
   - postgresql
-  - docker
 matrix:
   include:
     - language: rust
       os: linux
       rust: nightly
+      cache: cargo
       before_install:
         - cd atcoder-problems-backend/
       before_script:
@@ -19,7 +19,7 @@ matrix:
     - language: node_js
       node_js: node
       before_script:
-        - cd atcoder-problems-frontend
+        - cd atcoder-problems-frontend/
       script:
         - npm install yarn -g
         - yarn
@@ -27,13 +27,3 @@ matrix:
         - yarn test --coverage
         - npx codecov
         - yarn lint
-
-deploy:
-  provider: script
-  script:
-    - cd atcoder-problems-backend/
-    - docker build -t kenkoooo/atcoder-problems-backend .
-    - echo "$DOCKER_PASSWORD" | docker login -u kenkoooo --password-stdin
-    - docker push kenkoooo/atcoder-problems-backend
-  on:
-    branch: master
