--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -5,23 +5,36 @@ authors = ["kenkoooo <kenkou.n@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-chrono = "0.4"
-diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
+# Logging
 log = "0.4.6"
+simple_logger = "1.2"
+
+# Scraping
+algorithm-problem-client = "0.4"
+
+chrono = "0.4"
 regex = "1"
+
 rusoto_s3 = "0.42.0"
 rusoto_core = "0.42.0"
 rusoto_mock = "0.42.0"
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-simple_logger = "1.2"
+
+# Generate ETAG
 md-5 = "0.8"
 hex = "0.3"
-algorithm-problem-client = "0.4"
+
+# SQL
 r2d2 = "0.8.7"
+diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
+
+# To execute async functions
 futures = "0.3"
+
+# Web framework
 tide = "0.4.0"
-http = "0.2.0"
 
 [dev-dependencies]
 async-std = "1.2.0"
