--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -39,6 +39,8 @@ tide = "0.4.0"
 # Client to connect external services
 surf = "1.0.3"
 
+async-trait = "0.1"
+
 [dev-dependencies]
 async-std = "1.2.0"
 rand = "0.7.2"
