--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,15 @@ matrix:
         - cargo clean
         - cargo build
         - env RUST_TEST_THREADS=1 RUST_BACKTRACE=1 cargo test
-      after_success:
-        - test $TRAVIS_BRANCH = "master" && echo "$DOCKER_PASSWORD" | docker login -u kenkoooo --password-stdin
-        - test $TRAVIS_BRANCH = "master" && docker pull kenkoooo/atcoder-problems-backend
-        - test $TRAVIS_BRANCH = "master" && docker build -t kenkoooo/atcoder-problems-backend .
-        - test $TRAVIS_BRANCH = "master" && docker push kenkoooo/atcoder-problems-backend
+      deploy:
+        provider: script
+        script:
+          - echo "$DOCKER_PASSWORD" | docker login -u kenkoooo --password-stdin
+          - docker pull kenkoooo/atcoder-problems-backend
+          - docker build -t kenkoooo/atcoder-problems-backend .
+          - docker push kenkoooo/atcoder-problems-backend
+        on:
+          repo: master
 
     - language: node_js
       node_js: node
