--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,7 @@ matrix:
         - env RUST_TEST_THREADS=1 RUST_BACKTRACE=1 cargo test
       deploy:
         provider: script
-        script:
-          - cd atcoder-problems-backend/
-          - echo "$DOCKER_PASSWORD" | docker login -u kenkoooo --password-stdin
-          - docker pull kenkoooo/atcoder-problems-backend
-          - docker build -t kenkoooo/atcoder-problems-backend .
-          - docker push kenkoooo/atcoder-problems-backend
+        script: ./atcoder-problems-backend/docker-deploy.sh
         on:
           branch: master
 
