--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
   include:
     - language: rust
       os: linux
-      rust: stable
+      rust: nightly
       cache: cargo
       before_install:
         - cd atcoder-problems-backend/
