--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.8.3",
     "react-measure": "^2.2.4",
     "react-redux": "^7.1.0",
+    "react-refetch": "4.0.0-0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "reactstrap": "^8.2.0",
