--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://kenkoooo.com/atcoder",
   "dependencies": {
     "@types/jest": "24.0.23",
+    "@types/js-cookie": "^2.2.4",
     "@types/node": "12.12.14",
     "@types/react": "16.9.15",
     "@types/react-bootstrap-table": "^4.3.7",
@@ -15,6 +16,7 @@
     "@types/recharts": "^1.1.14",
     "bootstrap": "^4.3.1",
     "immutable": "^4.0.0-rc.12",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "react": "^16.8.3",
     "react-bootstrap-table": "^4.3.1",
