--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -10,11 +10,11 @@ log = "0.4.6"
 simple_logger = "1.2"
 
 # Scraping
-algorithm-problem-client = "0.4"
+algorithm-problem-client = "0.5"
 
 chrono = "0.4"
 regex = "1"
-rust-s3 = "0.18.6"
+rust-s3 = "=0.18.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
