--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -46,6 +46,7 @@
   ],
   "devDependencies": {
     "codecov": "^3.5.0",
+    "http-proxy-middleware": "^0.20.0",
     "prettier": "^1.18.2",
     "prettier-tslint": "^0.4.2",
     "tslint": "^5.20.0",
