--- a/atcoder-problems-frontend/.env
+++ b/atcoder-problems-frontend/.env
@@ -1,1 +1,2 @@
 REACT_APP_INTERNAL_API_URL=https://kenkoooo.com/atcoder/internal-api
+REACT_APP_ATCODER_API_URL=https://kenkoooo.com/atcoder/atcoder-api
