--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -22,7 +22,7 @@
     "react-measure": "^2.2.4",
     "react-refetch": "4.0.0-0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "reactstrap": "^8.2.0",
     "recharts": "^2.0.0-beta.1",
     "typescript": "3.7.3"
