--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://kenkoooo.com/atcoder",
   "dependencies": {
+    "@primer/octicons-react": "^9.6.0",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
     "@types/react": "16.9.15",
