--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -18,10 +18,6 @@ rust-s3 = "=0.18.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Generate ETAG
-md-5 = "0.8"
-hex = "0.3"
-
 # SQL
 r2d2 = "0.8.7"
 diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
@@ -36,9 +32,10 @@ surf = "1.0.3"
 isahc = "0.8"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 
-async-trait = "0.1"
+async-trait = "0.1.30"
 
 async-std = { version = "1.5.0", features = ["attributes"] }
+tokio = { version="0.2.20", features = ["rt-threaded", "macros"] }
 
 [dev-dependencies]
 rand = "0.7.2"
