--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -5,15 +5,6 @@
   "homepage": "https://kenkoooo.com/atcoder",
   "dependencies": {
     "@primer/octicons-react": "^9.6.0",
-    "@types/jest": "24.0.23",
-    "@types/node": "12.12.14",
-    "@types/react": "16.9.15",
-    "@types/react-bootstrap-table": "^4.3.7",
-    "@types/react-dom": "16.9.4",
-    "@types/react-measure": "^2.0.5",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/reactstrap": "^8.2.0",
-    "@types/recharts": "^1.1.14",
     "bootstrap": "^4.3.1",
     "immutable": "^4.0.0-rc.12",
     "moment": "^2.24.0",
@@ -25,8 +16,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
     "reactstrap": "^8.2.0",
-    "recharts": "^2.0.0-beta.1",
-    "typescript": "3.7.3"
+    "recharts": "^2.0.0-beta.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,12 +36,22 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jest": "24.0.23",
+    "@types/node": "12.12.14",
+    "@types/react": "16.9.15",
+    "@types/react-bootstrap-table": "^4.3.7",
+    "@types/react-dom": "16.9.4",
+    "@types/react-measure": "^2.0.5",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/reactstrap": "^8.2.0",
+    "@types/recharts": "^1.1.14",
     "http-proxy-middleware": "^0.20.0",
     "prettier": "^1.18.2",
     "prettier-tslint": "^0.4.2",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.1.0"
+    "tslint-react": "^4.1.0",
+    "typescript": "3.7.3"
   }
 }
