--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -3,6 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://kenkoooo.com/atcoder",
+  "scripts": {
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "format": "yarn run sort-package-json && yarn run prettier && yarn run lint:fix",
+    "lint": "eslint --ignore-path .gitignore '**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "yarn run lint --fix",
+    "prettier": "prettier --write --ignore-path .gitignore '**/*.{css,html,js,json,jsx,md,ts,tsx}'",
+    "sort-package-json": "sort-package-json",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@primer/octicons-react": "^9.6.0",
     "bootstrap": "^4.3.1",
@@ -18,21 +35,6 @@
     "reactstrap": "^8.2.0",
     "recharts": "^2.0.0-beta.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint --ignore-path .gitignore '**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "yarn run lint --fix",
-    "format": "prettier --write --ignore-path .gitignore '**/*.{css,html,js,json,jsx,md,ts,tsx}'"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
   "devDependencies": {
     "@types/jest": "24.0.23",
     "@types/node": "12.12.14",
@@ -52,6 +54,7 @@
     "eslint-plugin-react-hooks": "^4.0.2",
     "http-proxy-middleware": "^0.20.0",
     "prettier": "^1.18.2",
+    "sort-package-json": "^1.42.2",
     "typescript": "3.7.3"
   }
 }
