--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -62,8 +62,8 @@
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.2",
     "http-proxy-middleware": "0.20.0",
-    "husky": ">=4",
-    "lint-staged": ">=10",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.2",
     "prettier": "2.0.5",
     "sort-package-json": "1.42.2",
     "typescript": "3.7.3"
