Enabled no-default-export, resolved #679

--- a/atcoder-problems-frontend/package.json
+++ b/atcoder-problems-frontend/package.json
@@ -27,9 +27,10 @@
     "*.{css,scss,html,json,md}": "prettier --write",
     "*.{js,jsx,ts,tsx}": [
       "prettier --write",
-      "eslint --fix --max-warnings=0"
+      "eslint --fix --max-warnings=0 --ignore-pattern"
     ],
     "../**/*.md": "prettier --write",
+    ".eslintrc.js": "prettier --write",
     "package.json": [
       "prettier --write",
       "sort-package-json"
