chore(sql-client): use `anyhow` instead of `thiserror`

--- a/atcoder-problems-backend/sql-client/Cargo.toml
+++ b/atcoder-problems-backend/sql-client/Cargo.toml
@@ -12,5 +12,5 @@ sqlx = { version = "0.3.5", features = ["postgres"] }
 async-trait = "0.1.30"
 serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
-thiserror = "1.0.20"
+anyhow = "1.0.32"
 async-std = { version = "1.6", features = ["attributes"] }
