--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
         - cd atcoder-problems-backend/
       before_script:
         - psql -c "CREATE USER kenkoooo PASSWORD 'pass';" -U postgres
-        - psql -c "CREATE DATABASE test OWNER kenkoooo;" -U postgres
+        - psql -c "CREATE DATABASE test OWNER kenkoooo ENCODING utf8;" -U postgres
       script:
         - cargo clean
         - cargo build
